--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requests==2.32.3
-pandas==2.2.3
-matplotlib==3.9.2
-python-dotenv==1.0.1
+ttkbootstrap>=1.10.1
+pandas>=2.2,<3
+matplotlib>=3.8,<3.10
+requests>=2.31
+python-dotenv>=1.0
